--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "kitsu-core": "^7.0.0",
     "lodash": "^4.17.11",
     "next": "^7.0.2",
-    "react": "^16.8.3",
+    "react": "^16.9.0-alpha.0",
     "react-datepicker": "^2.3.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.9.0-alpha.0",
     "react-select": "^2.3.0",
     "react-table": "6.8.6",
+    "react-test-renderer": "^16.9.0-alpha.0",
     "title-case": "^2.1.1"
   },
   "devDependencies": {
